More wikidata script changes.  Fix bug in kgtkcompact.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -44,10 +44,8 @@
     "```\n",
     "Here are some contraints on the contents of the input file:\n",
     "- The input file starts with a KGTK header record.\n",
-    "  - In addition to the `id`, `node1`, `label`, and `node2` columns, the file is expected contain `rank`, `node2;wikidatatype`, and `lang` columns.\n",
-    "  - The `rank` column is not used in this script.\n",
-    "  - The `node2;wikidatatype` column is used to partion claims by Wikidata property datatype.\n",
-    "  - The `lang` column is used to extract English language sitelinks.\n",
+    "  - In addition to the `id`, `node1`, `label`, and `node2` columns, the file is expected contain the `node2;wikidatatype` column.\n",
+    "  - The `node2;wikidatatype` column is used to partition claims by Wikidata property datatype.\n",
     "- The `id` column must contain a nonempty value.\n",
     "  - It must follow certain patterns for claim and qualifier records.\n",
     "    - Claim records contain 5 sections separated by hyphens (4 hyphens total).\n",
@@ -188,8 +186,10 @@
     " -p '; ^alias$ ;'         -o {wikidata_parts_path}/aliases.{kgtk_extension} \\\n",
     " -p '; ^description$ ;'   -o {wikidata_parts_path}/descriptions.{kgtk_extension} \\\n",
     " -p '; ^label$ ;'         -o {wikidata_parts_path}/labels.{kgtk_extension} \\\n",
-    " -p '; ^(addl_wikipedia_sitelink|sitelink-badge|sitelink-language|sitelink-site|sitelink-title|wikipedia_sitelink)$ ;' \\\n",
+    " -p '; ^(addl_wikipedia_sitelink|wikipedia_sitelink)$ ;' \\\n",
     "                          -o {wikidata_parts_path}/sitelinks.{kgtk_extension} \\\n",
+    " -p '; ^(sitelink-badge|sitelink-language|sitelink-site|sitelink-title)$ ;' \\\n",
+    "                          -o {wikidata_parts_path}/sitelinks.qualifiers.{kgtk_extension} \\\n",
     " -p '; ^type$ ;'          -o {wikidata_parts_path}/metadata.types.{kgtk_extension} \\\n",
     " -p '^.*-.*-.*-.*-.*$ ;;' -o {wikidata_parts_path}/qualifiers.{kgtk_extension} \\\n",
     " --reject-file {wikidata_parts_path}/claims.{kgtk_extension}"
@@ -244,9 +244,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!{kgtk_command} filter --verbose={verbose} --use-mgzip={use_mgzip} --obj=lang \\\n",
+    "!{kgtk_command} filter --verbose={verbose} --use-mgzip={use_mgzip} \\\n",
+    " --input-file {wikidata_parts_path}/sitelinks.qualifiers.{kgtk_extension} \\\n",
+    " -p '; sitelink-language ; en' -o {wikidata_parts_path}/sitelinks.language.en.{kgtk_extension}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{kgtk_command} ifexists --verbose={verbose} --use-mgzip={use_mgzip} --presorted \\\n",
     " --input-file {wikidata_parts_path}/sitelinks.{kgtk_extension} \\\n",
-    " -p ';; en' -o {wikidata_parts_path}/sitelinks.en.{kgtk_extension}"
+    " --filter-on {wikidata_parts_path}/sitelinks.language.en.{kgtk_extension} \\\n",
+    " --output-file {wikidata_parts_path}/sitelinks.en.{kgtk_extension} \\\n",
+    " --input-keys  id \\\n",
+    " --filter-keys node1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{kgtk_command} ifexists --verbose={verbose} --use-mgzip={use_mgzip} --presorted \\\n",
+    " --input-file {wikidata_parts_path}/sitelinks.qualifiers.{kgtk_extension} \\\n",
+    " --filter-on {wikidata_parts_path}/sitelinks.language.en.{kgtk_extension} \\\n",
+    " --output-file {wikidata_parts_path}/sitelinks.qualifiers.en.{kgtk_extension} \\\n",
+    " --input-keys  id \\\n",
+    " --filter-keys node1"
    ]
   },
   {
