Filter more efficiently. Allocate less memory for sort. Split claims and qualifiers by node1/id links.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -47,9 +47,6 @@
     "  - In addition to the `id`, `node1`, `label`, and `node2` columns, the file is expected contain the `node2;wikidatatype` column.\n",
     "  - The `node2;wikidatatype` column is used to partition claims by Wikidata property datatype.\n",
     "- The `id` column must contain a nonempty value.\n",
-    "  - It must follow certain patterns for claim and qualifier records.\n",
-    "    - Claim records contain 5 sections separated by hyphens (4 hyphens total).\n",
-    "    - Qualifier records contain 8 sections separated by dashes (7 dashes total).\n",
     "- The first section of an `id` value must be the `node` value for the record.\n",
     "  - The qualifier extraction operations depend upon this constraint. \n",
     "- In addition to the claims and qualifiers, the input file is expected to contain:\n",
@@ -73,13 +70,13 @@
     "| Parameter | Description | Default |\n",
     "| --------- | ----------- | ------- |\n",
     "| `wikidata_input_path` | A folder containing the Wikidata KGTK edges to partition. | '/data4/rogers/elicit/cache/datasets/wikidata-20200803/data/all.tsv.gz' |\n",
-    "| `wikidata_parts_path` | A folder containing the part files of Wikidata, including files such as `part.wikibase-item.tsv.gz` | '/data4/rogers/elicit/cache/datasets/wikidata-20200803/parts' |\n",
+    "| `wikidata_parts_path` | A folder to receive the partitioned Wikidata files, such as `part.wikibase-item.tsv.gz` | '/data4/rogers/elicit/cache/datasets/wikidata-20200803/parts' |\n",
     "| `temp_folder_path` |    A folder that may be used for temporary files. | wikidata_parts_path + '/temp' |\n",
     "| `gzip_command` |        The compression command for sorting. | 'pigz' |\n",
     "| `kgtk_command` |        The kgtk commmand and any common options. | 'time kgtk --debug --timing' |\n",
     "| `kgtk_extension` |      The file extension for generated KGTK files. Appending `.gz` implies gzip compression. | 'tsv.gz' |\n",
     "| `presorted` |           When True, the input file is already sorted. | 'False' |\n",
-    "| `sort_extras` |         Extra parameters for the sort program.  The default specifies a path for temporary files. Other useful parameters include '--buffer-size' and '--parallel'. | '--parallel 24 --buffer-size 50% --temporary-directory ' + temp_folder_path |\n",
+    "| `sort_extras` |         Extra parameters for the sort program.  The default specifies a path for temporary files. Other useful parameters include '--buffer-size' and '--parallel'. | '--parallel 24 --buffer-size 30% --temporary-directory ' + temp_folder_path |\n",
     "| `use_mgzip` |           When True, use the mgzip program where appropriate for faster compression. | 'True' |\n",
     "| `verbose` |             When True, produce additional feedback messages. | 'True' |\n"
    ]
@@ -102,7 +99,7 @@
     "kgtk_command =       'time kgtk --debug --timing'\n",
     "kgtk_extension =      'tsv.gz'\n",
     "presorted =           'False'\n",
-    "sort_extras =         '--parallel 24 --buffer-size 50% --temporary-directory ' + temp_folder_path\n",
+    "sort_extras =         '--parallel 24 --buffer-size 30% --temporary-directory ' + temp_folder_path\n",
     "use_mgzip =           'True'\n",
     "verbose =             'True'\n"
    ]
@@ -140,9 +137,7 @@
    "source": [
     "### Sort the Input Data Unless Presorted\n",
     "Sort the input data file by (id, node1, label, node2).\n",
-    "This may take a while.",
-    "\n",
-    "Note: Some later steps depend upon the ID values following the patterns used by `kgtk import-wikidata`."
+    "This may take a while."
    ]
   },
   {
@@ -169,9 +164,7 @@
    "metadata": {},
    "source": [
     "### Partition the Claims, Qualifiers, and Entity Data\n",
-    "Split out the entity data (alias, description, label, and sitelinks) and additional metadata (datatype, type).  Separate the qualifiers from the claims.\n",
-    "\n",
-    "Note: this code depends upon the ID values following the patterns used by `kgtk import-wikidata`."
+    "Split out the entity data (alias, description, label, and sitelinks) and additional metadata (datatype, type).  Separate the qualifiers from the claims.\n"
    ]
   },
   {
@@ -180,19 +173,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!{kgtk_command} filter --verbose={verbose} --use-mgzip={use_mgzip} --first-match-only --regex \\\n",
+    "!{kgtk_command} filter --verbose={verbose} --use-mgzip={use_mgzip} --first-match-only \\\n",
     " --input-file {partition_input_file} \\\n",
-    " -p '; ^datatype$ ;'      -o {wikidata_parts_path}/metadata.property.datatypes.{kgtk_extension} \\\n",
-    " -p '; ^alias$ ;'         -o {wikidata_parts_path}/aliases.{kgtk_extension} \\\n",
-    " -p '; ^description$ ;'   -o {wikidata_parts_path}/descriptions.{kgtk_extension} \\\n",
-    " -p '; ^label$ ;'         -o {wikidata_parts_path}/labels.{kgtk_extension} \\\n",
-    " -p '; ^(addl_wikipedia_sitelink|wikipedia_sitelink)$ ;' \\\n",
+    " -p '; datatype ;'        -o {wikidata_parts_path}/metadata.property.datatypes.{kgtk_extension} \\\n",
+    " -p '; alias ;'           -o {wikidata_parts_path}/aliases.{kgtk_extension} \\\n",
+    " -p '; description ;'     -o {wikidata_parts_path}/descriptions.{kgtk_extension} \\\n",
+    " -p '; label ;'           -o {wikidata_parts_path}/labels.{kgtk_extension} \\\n",
+    " -p '; addl_wikipedia_sitelink,wikipedia_sitelink ;' \\\n",
     "                          -o {wikidata_parts_path}/sitelinks.{kgtk_extension} \\\n",
-    " -p '; ^(sitelink-badge|sitelink-language|sitelink-site|sitelink-title)$ ;' \\\n",
+    " -p '; sitelink-badge,sitelink-language,sitelink-site,sitelink-title ;' \\\n",
     "                          -o {wikidata_parts_path}/sitelinks.qualifiers.{kgtk_extension} \\\n",
-    " -p '; ^type$ ;'          -o {wikidata_parts_path}/metadata.types.{kgtk_extension} \\\n",
-    " -p '^.*-.*-.*-.*-.*$ ;;' -o {wikidata_parts_path}/qualifiers.{kgtk_extension} \\\n",
-    " --reject-file {wikidata_parts_path}/claims.{kgtk_extension}"
+    " -p '; type ;'            -o {wikidata_parts_path}/metadata.types.{kgtk_extension} \\\n",
+    " --reject-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-id.{kgtk_extension}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort the claims and qualifiers on Node1\n",
+    "Sort the combined claims and qualifiers file by the node1 column.\n",
+    "This may take a while."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{kgtk_command} sort2 --verbose={verbose} --gzip-command={gzip_command} \\\n",
+    " --input-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-id.{kgtk_extension} \\\n",
+    " --output-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-node1.{kgtk_extension}\\\n",
+    " --columns     node1 \\\n",
+    " --extra       \"{sort_extras}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split the claims and qualifiers\n",
+    "If row A's node1 value matches some other row's id value, the then row A is a qualifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{kgtk_command} ifexists --verbose={verbose} --use-mgzip={use_mgzip} --presorted \\\n",
+    " --input-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-node1.{kgtk_extension} \\\n",
+    " --filter-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-id.{kgtk_extension} \\\n",
+    " --output-file {wikidata_parts_path}/qualifiers.sorted-by-node1.{kgtk_extension}\\\n",
+    " --reject-file {wikidata_parts_path}/claims.sorted-by-node1.{kgtk_extension}\\\n",
+    " --input-keys node1 \\\n",
+    " --filter-keys id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort the claims by ID\n",
+    "Sort the split claims by id, node1, label, node2.\n",
+    "This may take a while."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{kgtk_command} sort2 --verbose={verbose} --gzip-command={gzip_command} \\\n",
+    " --input-file {wikidata_parts_path}/claims.sorted-by-node1.{kgtk_extension} \\\n",
+    " --output-file {wikidata_parts_path}/claims.{kgtk_extension}\\\n",
+    " --columns     id node1 label node2 \\\n",
+    " --extra       \"{sort_extras}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort the qualifiers by ID\n",
+    "Sort the split qualifiers by id, node1, label, node2.\n",
+    "This may take a while."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{kgtk_command} sort2 --verbose={verbose} --gzip-command={gzip_command} \\\n",
+    " --input-file {wikidata_parts_path}/qualifiers.sorted-by-node1.{kgtk_extension} \\\n",
+    " --output-file {wikidata_parts_path}/qualifiers.{kgtk_extension}\\\n",
+    " --columns     id node1 label node2 \\\n",
+    " --extra       \"{sort_extras}\""
    ]
   },
   {
