fix issues, add more steps to concatenate

--- a/use-cases/Wikidata Subsets.ipynb
+++ b/use-cases/Wikidata Subsets.ipynb
@@ -1268,11 +1268,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## concatenate files to get the `all` file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kgtk cat -i $OUT/claims.tsv.gz \\\n",
+    "$OUT/labels.en.tsv.gz \\\n",
+    "$OUT/aliases.en.tsv.gz \\\n",
+    "$OUT/descriptions.en.tsv.gz \\\n",
+    "$OUT/qualifiers.tsv.gz \\\n",
+    "$OUT/metadata.pagerank.undirected.tsv.gz \\\n",
+    "$OUT/metadata.pagerank.directed.tsv.gz \\\n",
+    "$OUT/metadata.in_degree.tsv.gz \\\n",
+    "$OUT/metadata.out_degree.tsv.gz \\\n",
+    "-o $OUT/wikidataos.all.tsv.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## concatenate files to get the `all for triples` file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kgtk cat -i $OUT/wikidataos.all.tsv.gz \\\n",
+    "$OUT/derived.P31.tsv.gz \\\n",
+    "$OUT/derived.P279.tsv.gz \\\n",
+    "$OUT/derived.isa.tsv.gz \\\n",
+    "$OUT/derived.P279star.tsv.gz \\\n",
+    "-o $OUT/wikidataos.all.for.triples.tsv.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter out `novalue`, `somevalue` and `P9`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kgtk filter -i $OUT/wikidataos.all.for.triples.tsv.gz \\\n",
+    "    -o $OUT/wikidataos.all.for.triples.filtered.tsv.gz \\\n",
+    "    -p ';;somevalue,novalue,P9' --invert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add ids for any edge with missing id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kgtk add-id -i $OUT/wikidataos.all.for.triples.filtered.tsv.gz \\\n",
+    "-o $OUT/wikidataos.all.for.triples.filtered.id.tsv.gz \\\n",
+    "--id-style node1-label-node2-num"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sort by `id`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kgtk sort2 -i $OUT/wikidataos.all.for.triples.filtered.id.tsv.gz \\\n",
+    "-o $OUT/wikidataos.all.for.triples.filtered.id.sorted.tsv.gz \n",
+    "-c id"
+   ]
   }
  ],
  "metadata": {
