--- a/use-cases/Wikidata Useful Files.ipynb
+++ b/use-cases/Wikidata Useful Files.ipynb
@@ -1289,7 +1289,7 @@
    "source": [
     "!$kypher -i \"$CLAIMS\" -o $TEMP/metadata.out_degree.tsv.gz \\\n",
     "--match '(n1)-[l]->()' \\\n",
-    "--return 'distinct n1 as node1, count(l) as node2, \"out_degree\" as label' "
+    "--return 'distinct n1 as node1, count(distinct l) as node2, \"out_degree\" as label' "
    ]
   },
   {
@@ -1319,29 +1319,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2020-11-14 19:20:53 query]: SQL Translation:\n",
-      "---------------------------------------------\n",
-      "  SELECT DISTINCT graph_1_c1.\"node2\" \"node1\", count(graph_1_c1.\"id\") \"node2\", ? \"label\"\n",
-      "     FROM graph_1 AS graph_1_c1\n",
-      "     WHERE graph_1_c1.\"node2;wikidatatype\"=?\n",
-      "     GROUP BY node1\n",
-      "  PARAS: ['in_degree', 'wikibase-item']\n",
-      "---------------------------------------------\n",
-      "     1342.16 real       458.20 user       498.16 sys\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# BUG in kypher, sometimes the following command will not work, as in we'll see multilple rows for a Qnode, which is\n",
+    "# fixable by deleting cache\n",
     "!$kypher -i \"$CLAIMS\" -o $TEMP/metadata.in_degree.tsv.gz \\\n",
-    "--match '()-[l {`node2;wikidatatype`:\"wikibase-item\"}]->(n2)' \\\n",
-    "--return 'distinct n2 as node1, count(l) as node2, \"in_degree\" as label' "
+    "--match '()-[l]->(n2 {`wikidatatype`:\"wikibase-item\"})' \\\n",
+    "--return 'distinct n2 as node1, count(distinct l) as node2, \"in_degree\" as label' \\\n",
+    "--order-by 'n2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename columns before adding ids, KGTK will complain\n",
+    "df = pd.read_csv(f'{os.environ['TEMP']}/metadata.in_degree.tsv.gz', sep='\\t')\n",
+    "df = df.rename(columns={\"node2\": \"node1\"})\n",
+    "df = df.rename(columns={'count(DISTINCT graph_1_c1.\"id\")': \"node2\"})\n",
+    "df.to_csv(f'{os.environ['TEMP']}/metadata.in_degree.1.tsv.gz', sep='\\t', index=False)"
    ]
   },
   {
@@ -1358,7 +1358,7 @@
     }
    ],
    "source": [
-    "!$kgtk add-id --id-style node1-label-node2-num -i $TEMP/metadata.in_degree.tsv.gz \\\n",
+    "!$kgtk add-id --id-style node1-label-node2-num -i $TEMP/metadata.in_degree.1.tsv.gz \\\n",
     "/ sort2 -o $OUT/metadata.in_degree.tsv.gz"
    ]
   },
@@ -1716,9 +1716,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "kgtk",
+   "display_name": "kgtk_env",
    "language": "python",
-   "name": "kgtk"
+   "name": "kgtk_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1730,7 +1730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
