add --undirected for undirected pagerank

--- a/use-cases/Wikidata Useful Files.ipynb
+++ b/use-cases/Wikidata Useful Files.ipynb
@@ -1238,7 +1238,7 @@
     "if compute_pagerank:\n",
     "    !$kgtk graph-statistics -i \"$ITEMS\" -o $OUT/metadata.pagerank.undirected.tsv.gz \\\n",
     "    --page-rank-property undirected_pagerank \\\n",
-    "    --pagerank --statistics-only \\\n",
+    "    --pagerank --statistics-only --undirected \\\n",
     "    --log $TEMP/metadata.pagerank.undirected.summary.txt "
    ]
   },
