Lift the property datatypes into the claims.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -249,9 +249,33 @@
    "source": [
     "!{kgtk_command} sort2 --verbose={verbose} --gzip-command={gzip_command} \\\n",
     " --input-file {wikidata_parts_path}/claims.sorted-by-node1.{kgtk_extension} \\\n",
-    " --output-file {wikidata_parts_path}/claims.{kgtk_extension}\\\n",
+    " --output-file {wikidata_parts_path}/claims.no-datatype.{kgtk_extension}\\\n",
     " --columns     id node1 label node2 \\\n",
     " --extra       \"{sort_extras}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge the datatypes into the claims\n",
+    "Merge the datatypes into the claims.  If the claims file already has a node2;wikidatatype column, lift only when that column has an empty value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{kgtk_command} lift --verbose={verbose} --use-mgzip={use_mgzip} \\\n",
+    " --input-file {wikidata_parts_path}/claims.no-datatype.{kgtk_extension} \\\n",
+    " --columns-to-lift label \\\n",
+    " --overwrite False \\\n",
+    " --label-file {wikidata_parts_path}/metadata.property.datatypes.{kgtk_extension}\\\n",
+    " --label-value datatype \\\n",
+    " --output-file {wikidata_parts_path}/claims.{kgtk_extension}\\\n",
+    " --columns-to-write node2;wikidatatype"
    ]
   },
   {
