Lift the property datatypes into the claims.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -258,8 +258,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Merge the datatypes into the claims\n",
-    "Merge the datatypes into the claims.  If the claims file already has a node2;wikidatatype column, lift only when that column has an empty value.\n"
+    "### Merge the Wikidata Property Datatypes into the claims\n",
+    "Merge the Wikidata Property Datatypes into the claims row as node2;wikidatatype. This column will be used to partition the claims by Wikidata Property Datatype ina later step.  If the claims file already has a node2;wikidatatype column, lift only when that column has an empty value.\n"
    ]
   },
   {
