Use revised file locations.  Default wo wikidata-20201130.  Put some files in the temp folder.  Fix a bug in filtering Englisk sitelink qualifiers.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "```\n",
     "papermill partition-wikidata.ipynb partition-wikidata.out.ipynb \\\n",
-    "-p wikidata_input_path /data4/rogers/elicit/cache/datasets/wikidata-20200803/data/all.tsv.gz \\\n",
-    "-p wikidata_parts_path /data4/rogers/elicit/cache/datasets/wikidata-20200803/parts \\\n",
+    "-p wikidata_input_path /data3/rogers/kgtk/gd/kgtk_public_graphs/cache/wikidata-20201130/data/all.tsv.gz \\\n",
+    "-p wikidata_parts_path /data3/rogers/kgtk/gd/pgtk_public_graphs/cache/wikidata-20201130/parts \\\n",
     "```\n",
     "\n",
     "Here is a sample of the records that might appear in the input KGTK file:\n",
@@ -92,8 +92,8 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "wikidata_input_path = '/data4/rogers/elicit/cache/datasets/wikidata-20200803/data/all.tsv.gz'\n",
-    "wikidata_parts_path = '/data4/rogers/elicit/cache/datasets/wikidata-20200803/parts2'\n",
+    "wikidata_input_path = '/data3/rogers/kgtk/gd/kgtk_public_graphs/cache/wikidata-20201130/data/all.tsv.gz'\n",
+    "wikidata_parts_path = '/data3/rogers/kgtk/gd/pgtk_public_graphs/cache/wikidata-20201130/parts'\n",
     "temp_folder_path =    wikidata_parts_path + '/temp'\n",
     "gzip_command =        'pigz'\n",
     "kgtk_command =       'time kgtk --debug --timing'\n",
@@ -184,7 +184,7 @@
     " -p '; sitelink-badge,sitelink-language,sitelink-site,sitelink-title ;' \\\n",
     "                          -o {wikidata_parts_path}/sitelinks.qualifiers.{kgtk_extension} \\\n",
     " -p '; type ;'            -o {wikidata_parts_path}/metadata.types.{kgtk_extension} \\\n",
-    " --reject-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-id.{kgtk_extension}"
+    " --reject-file {temp_folder}/claims-and-qualifiers.sorted-by-id.{kgtk_extension}"
    ]
   },
   {
@@ -203,8 +203,8 @@
    "outputs": [],
    "source": [
     "!{kgtk_command} sort2 --verbose={verbose} --gzip-command={gzip_command} \\\n",
-    " --input-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-id.{kgtk_extension} \\\n",
-    " --output-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-node1.{kgtk_extension}\\\n",
+    " --input-file {temp_folder}/claims-and-qualifiers.sorted-by-id.{kgtk_extension} \\\n",
+    " --output-file {temp_folder}/claims-and-qualifiers.sorted-by-node1.{kgtk_extension}\\\n",
     " --columns     node1 \\\n",
     " --extra       \"{sort_extras}\""
    ]
@@ -224,10 +224,10 @@
    "outputs": [],
    "source": [
     "!{kgtk_command} ifexists --verbose={verbose} --use-mgzip={use_mgzip} --presorted \\\n",
-    " --input-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-node1.{kgtk_extension} \\\n",
-    " --filter-file {wikidata_parts_path}/claims-and-qualifiers.sorted-by-id.{kgtk_extension} \\\n",
-    " --output-file {wikidata_parts_path}/qualifiers.sorted-by-node1.{kgtk_extension}\\\n",
-    " --reject-file {wikidata_parts_path}/claims.sorted-by-node1.{kgtk_extension}\\\n",
+    " --input-file {temp_folder}/claims-and-qualifiers.sorted-by-node1.{kgtk_extension} \\\n",
+    " --filter-file {temp_folder}/claims-and-qualifiers.sorted-by-id.{kgtk_extension} \\\n",
+    " --output-file {temp_folder}/qualifiers.sorted-by-node1.{kgtk_extension}\\\n",
+    " --reject-file {temp_folder}/claims.sorted-by-node1.{kgtk_extension}\\\n",
     " --input-keys node1 \\\n",
     " --filter-keys id"
    ]
@@ -248,8 +248,8 @@
    "outputs": [],
    "source": [
     "!{kgtk_command} sort2 --verbose={verbose} --gzip-command={gzip_command} \\\n",
-    " --input-file {wikidata_parts_path}/claims.sorted-by-node1.{kgtk_extension} \\\n",
-    " --output-file {wikidata_parts_path}/claims.no-datatype.{kgtk_extension}\\\n",
+    " --input-file {temp_folder}/claims.sorted-by-node1.{kgtk_extension} \\\n",
+    " --output-file {temp_folder}/claims.no-datatype.{kgtk_extension}\\\n",
     " --columns     id node1 label node2 \\\n",
     " --extra       \"{sort_extras}\""
    ]
@@ -269,7 +269,7 @@
    "outputs": [],
    "source": [
     "!{kgtk_command} lift --verbose={verbose} --use-mgzip={use_mgzip} \\\n",
-    " --input-file {wikidata_parts_path}/claims.no-datatype.{kgtk_extension} \\\n",
+    " --input-file {temp_folder}/claims.no-datatype.{kgtk_extension} \\\n",
     " --columns-to-lift label \\\n",
     " --overwrite False \\\n",
     " --label-file {wikidata_parts_path}/metadata.property.datatypes.{kgtk_extension}\\\n",
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "!{kgtk_command} sort2 --verbose={verbose} --gzip-command={gzip_command} \\\n",
-    " --input-file {wikidata_parts_path}/qualifiers.sorted-by-node1.{kgtk_extension} \\\n",
+    " --input-file {temp_folder}/qualifiers.sorted-by-node1.{kgtk_extension} \\\n",
     " --output-file {wikidata_parts_path}/qualifiers.{kgtk_extension}\\\n",
     " --columns     id node1 label node2 \\\n",
     " --extra       \"{sort_extras}\""
@@ -351,7 +351,7 @@
    "source": [
     "!{kgtk_command} filter --verbose={verbose} --use-mgzip={use_mgzip} \\\n",
     " --input-file {wikidata_parts_path}/sitelinks.qualifiers.{kgtk_extension} \\\n",
-    " -p '; sitelink-language ; en' -o {wikidata_parts_path}/sitelinks.language.en.{kgtk_extension}"
+    " -p '; sitelink-language ; en' -o {temp_folder}/sitelinks.language.en.{kgtk_extension}"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "source": [
     "!{kgtk_command} ifexists --verbose={verbose} --use-mgzip={use_mgzip} --presorted \\\n",
     " --input-file {wikidata_parts_path}/sitelinks.{kgtk_extension} \\\n",
-    " --filter-on {wikidata_parts_path}/sitelinks.language.en.{kgtk_extension} \\\n",
+    " --filter-on {temp_folder}/sitelinks.language.en.{kgtk_extension} \\\n",
     " --output-file {wikidata_parts_path}/sitelinks.en.{kgtk_extension} \\\n",
     " --input-keys  id \\\n",
     " --filter-keys node1"
@@ -376,9 +376,9 @@
    "source": [
     "!{kgtk_command} ifexists --verbose={verbose} --use-mgzip={use_mgzip} --presorted \\\n",
     " --input-file {wikidata_parts_path}/sitelinks.qualifiers.{kgtk_extension} \\\n",
-    " --filter-on {wikidata_parts_path}/sitelinks.language.en.{kgtk_extension} \\\n",
+    " --filter-on {temp_folder}/sitelinks.language.en.{kgtk_extension} \\\n",
     " --output-file {wikidata_parts_path}/sitelinks.qualifiers.en.{kgtk_extension} \\\n",
-    " --input-keys  id \\\n",
+    " --input-keys  node1 \\\n",
     " --filter-keys node1"
    ]
   },
