--- a/examples/KGTK Turorial.ipynb
+++ b/examples/KGTK Turorial.ipynb
@@ -1698,11 +1698,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Stop here: the stuff below is Pedro's scratchpad, will be deleted later"
+   ]
   },
   {
    "cell_type": "markdown",
